Parser2.output
State 145 conflicts: 1 shift/reduce
State 420 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | using_directives_optional namespace_decl_seq

    3 namespace_members: enum_decl
    4                  | class_decl
    5                  | interface_decl
    6                  | struct_decl
    7                  | namespace_members enum_decl
    8                  | namespace_members class_decl
    9                  | namespace_members interface_decl
   10                  | namespace_members struct_decl

   11 namespace_members_optional: %empty
   12                           | namespace_members

   13 namespace_decl: NAMESPACE IDENTIFIER '{' namespace_members_optional '}'

   14 namespace_decl_seq: namespace_decl
   15                   | namespace_decl_seq namespace_decl

   16 using_arg: IDENTIFIER
   17          | using_arg '.' IDENTIFIER

   18 using_directive: USING using_arg ';'

   19 using_directives: using_directive
   20                 | using_directives using_directive

   21 using_directives_optional: %empty
   22                          | using_directives

   23 standard_type: CHAR_KW
   24              | INT_KW
   25              | BOOL_KW
   26              | FLOAT_KW
   27              | STRING_KW

   28 standard_array_type: standard_type '[' ']'
   29                    | standard_array_type '[' ']'

   30 type: standard_type
   31     | standard_array_type
   32     | access_expr

   33 class_decl: PUBLIC CLASS IDENTIFIER '{' class_members_optional '}'
   34           | PUBLIC CLASS IDENTIFIER ':' using_arg '{' class_members_optional '}'
   35           | PUBLIC CLASS IDENTIFIER ':' OBJECT '{' class_members_optional '}'

   36 class_members: method_decl
   37              | field_decl
   38              | operator_overload
   39              | constructor_decl
   40              | destructor_decl
   41              | class_members method_decl
   42              | class_members field_decl
   43              | class_members operator_overload
   44              | class_members constructor_decl
   45              | class_members destructor_decl

   46 class_members_optional: %empty
   47                       | class_members

   48 struct_decl: PUBLIC STRUCT IDENTIFIER '{' struct_members_optional '}'
   49            | STRUCT IDENTIFIER '{' struct_members_optional '}'

   50 struct_members: field_decl ';'
   51               | method_decl
   52               | constructor_decl
   53               | destructor_decl
   54               | struct_members field_decl ';'
   55               | struct_members method_decl
   56               | struct_members constructor_decl
   57               | struct_members destructor_decl

   58 struct_members_optional: %empty
   59                        | struct_members

   60 interface_decl: PUBLIC INTERFACE IDENTIFIER '{' interface_members_optional '}'

   61 interface_member: type IDENTIFIER '(' method_arguments_optional ')' ';'
   62                 | VOID_KW IDENTIFIER '(' method_arguments_optional ')' ';'

   63 interface_members: interface_member
   64                  | interface_members interface_member

   65 interface_members_optional: %empty
   66                           | interface_members

   67 enumerators: IDENTIFIER
   68            | enumerators ',' IDENTIFIER

   69 enum_decl: PUBLIC ENUM IDENTIFIER '{' enumerators '}'

   70 visibility_modifier: PUBLIC
   71                    | PROTECTED
   72                    | PRIVATE
   73                    | INTERNAL
   74                    | PROTECTED_INTERNAL

   75 field_decl: visibility_modifier var_decl ';'
   76           | visibility_modifier var_decl_with_init ';'

   77 var_decl: type IDENTIFIER
   78         | VAR IDENTIFIER

   79 var_decl_with_init: type IDENTIFIER '=' expr
   80                   | VAR IDENTIFIER '=' expr

   81 method_decl: visibility_modifier type IDENTIFIER '(' method_arguments_optional ')' '{' stmt_seq_optional '}'
   82            | visibility_modifier VOID_KW IDENTIFIER '(' method_arguments_optional ')' '{' stmt_seq_optional '}'
   83            | visibility_modifier STATIC VOID_KW IDENTIFIER '(' method_arguments_optional ')' '{' stmt_seq_optional '}'
   84            | STATIC visibility_modifier VOID_KW IDENTIFIER '(' method_arguments_optional ')' '{' stmt_seq_optional '}'
   85            | visibility_modifier STATIC type IDENTIFIER '(' method_arguments_optional ')' '{' stmt_seq_optional '}'
   86            | STATIC visibility_modifier type IDENTIFIER '(' method_arguments_optional ')' '{' stmt_seq_optional '}'

   87 method_arguments: var_decl
   88                 | method_arguments ',' var_decl

   89 method_arguments_optional: %empty
   90                          | method_arguments

   91 operator_overload: visibility_modifier STATIC type OPERATOR '+' '(' var_decl ',' var_decl ')' '{' stmt_seq_optional '}'
   92                  | visibility_modifier STATIC type OPERATOR '-' '(' var_decl ',' var_decl ')' '{' stmt_seq_optional '}'
   93                  | visibility_modifier STATIC type OPERATOR '*' '(' var_decl ',' var_decl ')' '{' stmt_seq_optional '}'
   94                  | visibility_modifier STATIC type OPERATOR '/' '(' var_decl ',' var_decl ')' '{' stmt_seq_optional '}'
   95                  | visibility_modifier STATIC type OPERATOR '<' '(' var_decl ',' var_decl ')' '{' stmt_seq_optional '}'
   96                  | visibility_modifier STATIC type OPERATOR '>' '(' var_decl ',' var_decl ')' '{' stmt_seq_optional '}'
   97                  | visibility_modifier STATIC type OPERATOR EQUAL '(' var_decl ',' var_decl ')' '{' stmt_seq_optional '}'
   98                  | visibility_modifier STATIC type OPERATOR NOT_EQUAL '(' var_decl ',' var_decl ')' '{' stmt_seq_optional '}'
   99                  | visibility_modifier STATIC type OPERATOR LESS_OR_EQUAL '(' var_decl ',' var_decl ')' '{' stmt_seq_optional '}'
  100                  | visibility_modifier STATIC type OPERATOR GREATER_OR_EQUAL '(' var_decl ',' var_decl ')' '{' stmt_seq_optional '}'
  101                  | visibility_modifier STATIC type OPERATOR '!' '(' var_decl ')' '{' stmt_seq_optional '}'
  102                  | visibility_modifier STATIC type OPERATOR DECREMENT '(' var_decl ')' '{' stmt_seq_optional '}'
  103                  | visibility_modifier STATIC type OPERATOR INCREMENT '(' var_decl ')' '{' stmt_seq_optional '}'
  104                  | visibility_modifier STATIC type OPERATOR '-' '(' var_decl ')' '{' stmt_seq_optional '}'
  105                  | visibility_modifier STATIC type OPERATOR '+' '(' var_decl ')' '{' stmt_seq_optional '}'

  106 constructor_decl: visibility_modifier IDENTIFIER '(' ')' '{' stmt_seq_optional '}'
  107                 | visibility_modifier IDENTIFIER '(' method_arguments ')' '{' stmt_seq_optional '}'

  108 destructor_decl: TILDE IDENTIFIER '(' ')' '{' stmt_seq_optional '}'

  109 stmt: ';'
  110     | expr ';'
  111     | var_decl ';'
  112     | var_decl_with_init ';'
  113     | while_stmt
  114     | do_while_stmt
  115     | for_stmt
  116     | if_stmt
  117     | foreach_stmt
  118     | '{' stmt_seq_optional '}'
  119     | RETURN expr_optional ';'

  120 stmt_seq: stmt
  121         | stmt_seq stmt

  122 stmt_seq_optional: %empty
  123                  | stmt_seq

  124 while_stmt: WHILE '(' expr ')' stmt

  125 do_while_stmt: DO stmt WHILE '(' expr ')' ';'

  126 for_stmt: FOR '(' var_decl ';' expr_optional ';' expr_optional ')' stmt
  127         | FOR '(' var_decl_with_init ';' expr_optional ';' expr_optional ')' stmt
  128         | FOR '(' expr_optional ';' expr_optional ';' expr_optional ')' stmt

  129 if_stmt: IF '(' expr ')' stmt
  130        | IF '(' expr ')' stmt ELSE stmt

  131 foreach_stmt: FOREACH '(' var_decl IN_KW expr ')' stmt

  132 access_expr: '(' expr ')'
  133            | access_expr '[' expr ']'
  134            | access_expr '[' ']'
  135            | INTEGER
  136            | FLOATING_POINT
  137            | STRING
  138            | CHARACTER
  139            | TRUE_KW
  140            | FALSE_KW
  141            | IDENTIFIER
  142            | IDENTIFIER '(' expr_seq_optional ')'
  143            | access_expr '.' IDENTIFIER
  144            | access_expr '.' IDENTIFIER '(' expr_seq_optional ')'

  145 expr: expr '+' expr
  146     | expr '-' expr
  147     | expr '*' expr
  148     | expr '/' expr
  149     | expr '=' expr
  150     | expr PLUS_ASSIGN expr
  151     | expr MINUS_ASSIGN expr
  152     | expr MULTIPLY_ASSIGN expr
  153     | expr DIVISION_ASSIGN expr
  154     | expr '<' expr
  155     | expr '>' expr
  156     | expr EQUAL expr
  157     | expr NOT_EQUAL expr
  158     | expr LESS_OR_EQUAL expr
  159     | expr GREATER_OR_EQUAL expr
  160     | expr AND expr
  161     | expr OR expr
  162     | '!' expr
  163     | INCREMENT expr
  164     | DECREMENT expr
  165     | '+' expr
  166     | '-' expr
  167     | NULL_KW
  168     | access_expr
  169     | NEW type
  170     | NEW type '{' expr_seq_optional '}'
  171     | NEW '[' ']' '{' expr_seq_optional '}'
  172     | '(' standard_type ')' expr
  173     | NEW standard_type '[' expr ']'

  174 expr_optional: %empty
  175              | expr

  176 expr_seq: expr
  177         | expr_seq ',' expr

  178 expr_seq_optional: %empty
  179                  | expr_seq


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 101 162
    '(' (40) 61 62 81 82 83 84 85 86 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 124 125 126 127 128 129 130 131 132 142 144 172
    ')' (41) 61 62 81 82 83 84 85 86 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 124 125 126 127 128 129 130 131 132 142 144 172
    '*' (42) 93 147
    '+' (43) 91 105 145 165
    ',' (44) 68 88 91 92 93 94 95 96 97 98 99 100 177
    '-' (45) 92 104 146 166
    '.' (46) 17 143 144
    '/' (47) 94 148
    ':' (58) 34 35
    ';' (59) 18 50 54 61 62 75 76 109 110 111 112 119 125 126 127 128
    '<' (60) 95 154
    '=' (61) 79 80 149
    '>' (62) 96 155
    '[' (91) 28 29 133 134 171 173
    ']' (93) 28 29 133 134 171 173
    '{' (123) 13 33 34 35 48 49 60 69 81 82 83 84 85 86 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 118 170 171
    '}' (125) 13 33 34 35 48 49 60 69 81 82 83 84 85 86 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 118 170 171
    error (256)
    EQUAL (258) 97 156
    NOT_EQUAL (259) 98 157
    GREATER_OR_EQUAL (260) 100 159
    LESS_OR_EQUAL (261) 99 158
    OR (262) 161
    AND (263) 160
    PLUS_ASSIGN (264) 150
    MINUS_ASSIGN (265) 151
    MULTIPLY_ASSIGN (266) 152
    DIVISION_ASSIGN (267) 153
    INCREMENT (268) 103 163
    DECREMENT (269) 102 164
    IDENTIFIER <_identifier> (270) 13 16 17 33 34 35 48 49 60 61 62 67 68 69 77 78 79 80 81 82 83 84 85 86 106 107 108 141 142 143 144
    INTEGER <_integer> (271) 135
    FLOATING_POINT <_floatingPoint> (272) 136
    STRING <_string> (273) 137
    CHARACTER <_character> (274) 138
    RETURN (275) 119
    IF (276) 129 130
    ELSE (277) 130
    WHILE (278) 124 125
    DO (279) 125
    FOR (280) 126 127 128
    CHAR_KW (281) 23
    INT_KW (282) 24
    STRING_KW (283) 27
    BOOL_KW (284) 25
    FLOAT_KW (285) 26
    VOID_KW (286) 62 82 83 84
    NEW (287) 169 170 171 173
    NULL_KW (288) 167
    TRUE_KW (289) 139
    FALSE_KW (290) 140
    PUBLIC (291) 33 34 35 48 60 69 70
    PROTECTED (292) 71
    PRIVATE (293) 72
    STATIC (294) 83 84 85 86 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
    CLASS (295) 33 34 35
    STRUCT (296) 48 49
    ENUM (297) 69
    USING (298) 18
    NAMESPACE (299) 13
    FOREACH (300) 131
    IN_KW (301) 131
    OBJECT (302) 35
    OPERATOR (303) 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
    VAR (304) 78 80
    INTERFACE (305) 60
    TILDE (306) 108
    INTERNAL (307) 73
    PROTECTED_INTERNAL (308) 74
    UNARY_MINUS (309)
    UNARY_PLUS (310)


Nonterminals, with rules where they appear

    $accept (74)
        on left: 0
    program (75)
        on left: 1 2
        on right: 0
    namespace_members <_namespaceMembers> (76)
        on left: 3 4 5 6 7 8 9 10
        on right: 7 8 9 10 12
    namespace_members_optional <_namespaceMembers> (77)
        on left: 11 12
        on right: 13
    namespace_decl <_namespaceDecl> (78)
        on left: 13
        on right: 14 15
    namespace_decl_seq <_namespaceDeclSeq> (79)
        on left: 14 15
        on right: 2 15
    using_arg <_usingArg> (80)
        on left: 16 17
        on right: 17 18 34
    using_directive <_usingDirective> (81)
        on left: 18
        on right: 19 20
    using_directives <_usingDirectives> (82)
        on left: 19 20
        on right: 20 22
    using_directives_optional <_usingDirectives> (83)
        on left: 21 22
        on right: 2
    standard_type <_standardType> (84)
        on left: 23 24 25 26 27
        on right: 28 30 172 173
    standard_array_type <_standardArrayType> (85)
        on left: 28 29
        on right: 29 31
    type <_type> (86)
        on left: 30 31 32
        on right: 61 77 79 81 85 86 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 169 170
    class_decl <_classDecl> (87)
        on left: 33 34 35
        on right: 4 8
    class_members <_classMembers> (88)
        on left: 36 37 38 39 40 41 42 43 44 45
        on right: 41 42 43 44 45 47
    class_members_optional <_classMembers> (89)
        on left: 46 47
        on right: 33 34 35
    struct_decl <_structDecl> (90)
        on left: 48 49
        on right: 6 10
    struct_members <_structMembers> (91)
        on left: 50 51 52 53 54 55 56 57
        on right: 54 55 56 57 59
    struct_members_optional <_structMembers> (92)
        on left: 58 59
        on right: 48 49
    interface_decl <_interfaceDecl> (93)
        on left: 60
        on right: 5 9
    interface_member <_interfaceMember> (94)
        on left: 61 62
        on right: 63 64
    interface_members <_interfaceMembers> (95)
        on left: 63 64
        on right: 64 66
    interface_members_optional <_interfaceMembers> (96)
        on left: 65 66
        on right: 60
    enumerators <_enumerators> (97)
        on left: 67 68
        on right: 68 69
    enum_decl <_enumDecl> (98)
        on left: 69
        on right: 3 7
    visibility_modifier <_visibiltyModifier> (99)
        on left: 70 71 72 73 74
        on right: 75 76 81 82 83 84 85 86 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107
    field_decl <_fieldDecl> (100)
        on left: 75 76
        on right: 37 42 50 54
    var_decl <_varDecl> (101)
        on left: 77 78
        on right: 75 87 88 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 111 126 131
    var_decl_with_init <_varDecl> (102)
        on left: 79 80
        on right: 76 112 127
    method_decl <_methodDecl> (103)
        on left: 81 82 83 84 85 86
        on right: 36 41 51 55
    method_arguments <_methodArguments> (104)
        on left: 87 88
        on right: 88 90 107
    method_arguments_optional <_methodArguments> (105)
        on left: 89 90
        on right: 61 62 81 82 83 84 85 86
    operator_overload <_methodDecl> (106)
        on left: 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105
        on right: 38 43
    constructor_decl <_constructorDecl> (107)
        on left: 106 107
        on right: 39 44 52 56
    destructor_decl <_destructorDecl> (108)
        on left: 108
        on right: 40 45 53 57
    stmt <_stmt> (109)
        on left: 109 110 111 112 113 114 115 116 117 118 119
        on right: 120 121 124 125 126 127 128 129 130 131
    stmt_seq <_stmtSeq> (110)
        on left: 120 121
        on right: 121 123
    stmt_seq_optional <_stmtSeq> (111)
        on left: 122 123
        on right: 81 82 83 84 85 86 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 118
    while_stmt <_while> (112)
        on left: 124
        on right: 113
    do_while_stmt <_doWhile> (113)
        on left: 125
        on right: 114
    for_stmt <_for> (114)
        on left: 126 127 128
        on right: 115
    if_stmt <_if> (115)
        on left: 129 130
        on right: 116
    foreach_stmt <_foreach> (116)
        on left: 131
        on right: 117
    access_expr <_accessExpr> (117)
        on left: 132 133 134 135 136 137 138 139 140 141 142 143 144
        on right: 32 133 134 143 144 168
    expr <_expr> (118)
        on left: 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 167 168 169 170 171 172 173
        on right: 79 80 110 124 125 129 130 131 132 133 145 146 147 148 149 150 151 152 153 154 155 156 157 158 159 160 161 162 163 164 165 166 172 173 175 176 177
    expr_optional <_expr> (119)
        on left: 174 175
        on right: 119 126 127 128
    expr_seq <_exprSeq> (120)
        on left: 176 177
        on right: 177 179
    expr_seq_optional <_exprSeq> (121)
        on left: 178 179
        on right: 142 144 170 171


State 0

    0 $accept: . program $end

    USING  shift, and go to state 1

    NAMESPACE  reduce using rule 21 (using_directives_optional)
    $default   reduce using rule 1 (program)

    program                    go to state 2
    using_directive            go to state 3
    using_directives           go to state 4
    using_directives_optional  go to state 5


State 1

   18 using_directive: USING . using_arg ';'

    IDENTIFIER  shift, and go to state 6

    using_arg  go to state 7


State 2

    0 $accept: program . $end

    $end  shift, and go to state 8


State 3

   19 using_directives: using_directive .

    $default  reduce using rule 19 (using_directives)


State 4

   20 using_directives: using_directives . using_directive
   22 using_directives_optional: using_directives .

    USING  shift, and go to state 1

    $default  reduce using rule 22 (using_directives_optional)

    using_directive  go to state 9


State 5

    2 program: using_directives_optional . namespace_decl_seq

    NAMESPACE  shift, and go to state 10

    namespace_decl      go to state 11
    namespace_decl_seq  go to state 12


State 6

   16 using_arg: IDENTIFIER .

    $default  reduce using rule 16 (using_arg)


State 7

   17 using_arg: using_arg . '.' IDENTIFIER
   18 using_directive: USING using_arg . ';'

    '.'  shift, and go to state 13
    ';'  shift, and go to state 14


State 8

    0 $accept: program $end .

    $default  accept


State 9

   20 using_directives: using_directives using_directive .

    $default  reduce using rule 20 (using_directives)


State 10

   13 namespace_decl: NAMESPACE . IDENTIFIER '{' namespace_members_optional '}'

    IDENTIFIER  shift, and go to state 15


State 11

   14 namespace_decl_seq: namespace_decl .

    $default  reduce using rule 14 (namespace_decl_seq)


State 12

    2 program: using_directives_optional namespace_decl_seq .
   15 namespace_decl_seq: namespace_decl_seq . namespace_decl

    NAMESPACE  shift, and go to state 10

    $default  reduce using rule 2 (program)

    namespace_decl  go to state 16


State 13

   17 using_arg: using_arg '.' . IDENTIFIER

    IDENTIFIER  shift, and go to state 17


State 14

   18 using_directive: USING using_arg ';' .

    $default  reduce using rule 18 (using_directive)


State 15

   13 namespace_decl: NAMESPACE IDENTIFIER . '{' namespace_members_optional '}'

    '{'  shift, and go to state 18


State 16

   15 namespace_decl_seq: namespace_decl_seq namespace_decl .

    $default  reduce using rule 15 (namespace_decl_seq)


State 17

   17 using_arg: using_arg '.' IDENTIFIER .

    $default  reduce using rule 17 (using_arg)


State 18

   13 namespace_decl: NAMESPACE IDENTIFIER '{' . namespace_members_optional '}'

    PUBLIC  shift, and go to state 19
    STRUCT  shift, and go to state 20

    $default  reduce using rule 11 (namespace_members_optional)

    namespace_members           go to state 21
    namespace_members_optional  go to state 22
    class_decl                  go to state 23
    struct_decl                 go to state 24
    interface_decl              go to state 25
    enum_decl                   go to state 26


State 19

   33 class_decl: PUBLIC . CLASS IDENTIFIER '{' class_members_optional '}'
   34           | PUBLIC . CLASS IDENTIFIER ':' using_arg '{' class_members_optional '}'
   35           | PUBLIC . CLASS IDENTIFIER ':' OBJECT '{' class_members_optional '}'
   48 struct_decl: PUBLIC . STRUCT IDENTIFIER '{' struct_members_optional '}'
   60 interface_decl: PUBLIC . INTERFACE IDENTIFIER '{' interface_members_optional '}'
   69 enum_decl: PUBLIC . ENUM IDENTIFIER '{' enumerators '}'

    CLASS      shift, and go to state 27
    STRUCT     shift, and go to state 28
    ENUM       shift, and go to state 29
    INTERFACE  shift, and go to state 30


State 20

   49 struct_decl: STRUCT . IDENTIFIER '{' struct_members_optional '}'

    IDENTIFIER  shift, and go to state 31


State 21

    7 namespace_members: namespace_members . enum_decl
    8                  | namespace_members . class_decl
    9                  | namespace_members . interface_decl
   10                  | namespace_members . struct_decl
   12 namespace_members_optional: namespace_members .

    PUBLIC  shift, and go to state 19
    STRUCT  shift, and go to state 20

    $default  reduce using rule 12 (namespace_members_optional)

    class_decl      go to state 32
    struct_decl     go to state 33
    interface_decl  go to state 34
    enum_decl       go to state 35


State 22

   13 namespace_decl: NAMESPACE IDENTIFIER '{' namespace_members_optional . '}'

    '}'  shift, and go to state 36


State 23

    4 namespace_members: class_decl .

    $default  reduce using rule 4 (namespace_members)


State 24

    6 namespace_members: struct_decl .

    $default  reduce using rule 6 (namespace_members)


State 25

    5 namespace_members: interface_decl .

    $default  reduce using rule 5 (namespace_members)


State 26

    3 namespace_members: enum_decl .

    $default  reduce using rule 3 (namespace_members)


State 27

   33 class_decl: PUBLIC CLASS . IDENTIFIER '{' class_members_optional '}'
   34           | PUBLIC CLASS . IDENTIFIER ':' using_arg '{' class_members_optional '}'
   35           | PUBLIC CLASS . IDENTIFIER ':' OBJECT '{' class_members_optional '}'

    IDENTIFIER  shift, and go to state 37


State 28

   48 struct_decl: PUBLIC STRUCT . IDENTIFIER '{' struct_members_optional '}'

    IDENTIFIER  shift, and go to state 38


State 29

   69 enum_decl: PUBLIC ENUM . IDENTIFIER '{' enumerators '}'

    IDENTIFIER  shift, and go to state 39


State 30

   60 interface_decl: PUBLIC INTERFACE . IDENTIFIER '{' interface_members_optional '}'

    IDENTIFIER  shift, and go to state 40


State 31

   49 struct_decl: STRUCT IDENTIFIER . '{' struct_members_optional '}'

    '{'  shift, and go to state 41


State 32

    8 namespace_members: namespace_members class_decl .

    $default  reduce using rule 8 (namespace_members)


State 33

   10 namespace_members: namespace_members struct_decl .

    $default  reduce using rule 10 (namespace_members)


State 34

    9 namespace_members: namespace_members interface_decl .

    $default  reduce using rule 9 (namespace_members)


State 35

    7 namespace_members: namespace_members enum_decl .

    $default  reduce using rule 7 (namespace_members)


State 36

   13 namespace_decl: NAMESPACE IDENTIFIER '{' namespace_members_optional '}' .

    $default  reduce using rule 13 (namespace_decl)


State 37

   33 class_decl: PUBLIC CLASS IDENTIFIER . '{' class_members_optional '}'
   34           | PUBLIC CLASS IDENTIFIER . ':' using_arg '{' class_members_optional '}'
   35           | PUBLIC CLASS IDENTIFIER . ':' OBJECT '{' class_members_optional '}'

    '{'  shift, and go to state 42
    ':'  shift, and go to state 43


State 38

   48 struct_decl: PUBLIC STRUCT IDENTIFIER . '{' struct_members_optional '}'

    '{'  shift, and go to state 44


State 39

   69 enum_decl: PUBLIC ENUM IDENTIFIER . '{' enumerators '}'

    '{'  shift, and go to state 45


State 40

   60 interface_decl: PUBLIC INTERFACE IDENTIFIER . '{' interface_members_optional '}'

    '{'  shift, and go to state 46


State 41

   49 struct_decl: STRUCT IDENTIFIER '{' . struct_members_optional '}'

    PUBLIC              shift, and go to state 47
    PROTECTED           shift, and go to state 48
    PRIVATE             shift, and go to state 49
    STATIC              shift, and go to state 50
    TILDE               shift, and go to state 51
    INTERNAL            shift, and go to state 52
    PROTECTED_INTERNAL  shift, and go to state 53

    $default  reduce using rule 58 (struct_members_optional)

    struct_members           go to state 54
    struct_members_optional  go to state 55
    visibility_modifier      go to state 56
    field_decl               go to state 57
    method_decl              go to state 58
    constructor_decl         go to state 59
    destructor_decl          go to state 60


State 42

   33 class_decl: PUBLIC CLASS IDENTIFIER '{' . class_members_optional '}'

    PUBLIC              shift, and go to state 47
    PROTECTED           shift, and go to state 48
    PRIVATE             shift, and go to state 49
    STATIC              shift, and go to state 50
    TILDE               shift, and go to state 51
    INTERNAL            shift, and go to state 52
    PROTECTED_INTERNAL  shift, and go to state 53

    $default  reduce using rule 46 (class_members_optional)

    class_members           go to state 61
    class_members_optional  go to state 62
    visibility_modifier     go to state 63
    field_decl              go to state 64
    method_decl             go to state 65
    operator_overload       go to state 66
    constructor_decl        go to state 67
    destructor_decl         go to state 68


State 43

   34 class_decl: PUBLIC CLASS IDENTIFIER ':' . using_arg '{' class_members_optional '}'
   35           | PUBLIC CLASS IDENTIFIER ':' . OBJECT '{' class_members_optional '}'

    IDENTIFIER  shift, and go to state 6
    OBJECT      shift, and go to state 69

    using_arg  go to state 70


State 44

   48 struct_decl: PUBLIC STRUCT IDENTIFIER '{' . struct_members_optional '}'

    PUBLIC              shift, and go to state 47
    PROTECTED           shift, and go to state 48
    PRIVATE             shift, and go to state 49
    STATIC              shift, and go to state 50
    TILDE               shift, and go to state 51
    INTERNAL            shift, and go to state 52
    PROTECTED_INTERNAL  shift, and go to state 53

    $default  reduce using rule 58 (struct_members_optional)

    struct_members           go to state 54
    struct_members_optional  go to state 71
    visibility_modifier      go to state 56
    field_decl               go to state 57
    method_decl              go to state 58
    constructor_decl         go to state 59
    destructor_decl          go to state 60


State 45

   69 enum_decl: PUBLIC ENUM IDENTIFIER '{' . enumerators '}'

    IDENTIFIER  shift, and go to state 72

    enumerators  go to state 73


State 46

   60 interface_decl: PUBLIC INTERFACE IDENTIFIER '{' . interface_members_optional '}'

    IDENTIFIER      shift, and go to state 74
    INTEGER         shift, and go to state 75
    FLOATING_POINT  shift, and go to state 76
    STRING          shift, and go to state 77
    CHARACTER       shift, and go to state 78
    CHAR_KW         shift, and go to state 79
    INT_KW          shift, and go to state 80
    STRING_KW       shift, and go to state 81
    BOOL_KW         shift, and go to state 82
    FLOAT_KW        shift, and go to state 83
    VOID_KW         shift, and go to state 84
    TRUE_KW         shift, and go to state 85
    FALSE_KW        shift, and go to state 86
    '('             shift, and go to state 87

    $default  reduce using rule 65 (interface_members_optional)

    standard_type               go to state 88
    standard_array_type         go to state 89
    type                        go to state 90
    interface_member            go to state 91
    interface_members           go to state 92
    interface_members_optional  go to state 93
    access_expr                 go to state 94


State 47

   70 visibility_modifier: PUBLIC .

    $default  reduce using rule 70 (visibility_modifier)


State 48

   71 visibility_modifier: PROTECTED .

    $default  reduce using rule 71 (visibility_modifier)


State 49

   72 visibility_modifier: PRIVATE .

    $default  reduce using rule 72 (visibility_modifier)


State 50

   84 method_decl: STATIC . visibility_modifier VOID_KW IDENTIFIER '(' method_arguments_optional ')' '{' stmt_seq_optional '}'
   86            | STATIC . visibility_modifier type IDENTIFIER '(' method_arguments_optional ')' '{' stmt_seq_optional '}'

    PUBLIC              shift, and go to state 47
    PROTECTED           shift, and go to state 48
    PRIVATE             shift, and go to state 49
    INTERNAL            shift, and go to state 52
    PROTECTED_INTERNAL  shift, and go to state 53

    visibility_modifier  go to state 95


State 51

  108 destructor_decl: TILDE . IDENTIFIER '(' ')' '{' stmt_seq_optional '}'

    IDENTIFIER  shift, and go to state 96


State 52

   73 visibility_modifier: INTERNAL .

    $default  reduce using rule 73 (visibility_modifier)


State 53

   74 visibility_modifier: PROTECTED_INTERNAL .

    $default  reduce using rule 74 (visibility_modifier)


State 54

   54 struct_members: struct_members . field_decl ';'
   55               | struct_members . method_decl
   56               | struct_members . constructor_decl
   57               | struct_members . destructor_decl
   59 struct_members_optional: struct_members .

    PUBLIC              shift, and go to state 47
    PROTECTED           shift, and go to state 48
    PRIVATE             shift, and go to state 49
    STATIC              shift, and go to state 50
    TILDE               shift, and go to state 51
    INTERNAL            shift, and go to state 52
    PROTECTED_INTERNAL  shift, and go to state 53

    $default  reduce using rule 59 (struct_members_optional)

    visibility_modifier  go to state 56
    field_decl           go to state 97
    method_decl          go to state 98
    constructor_decl     go to state 99
    destructor_decl      go to state 100


State 55

   49 struct_decl: STRUCT IDENTIFIER '{' struct_members_optional . '}'

    '}'  shift, and go to state 101


State 56

   75 field_decl: visibility_modifier . var_decl ';'
   76           | visibility_modifier . var_decl_with_init ';'
   81 method_decl: visibility_modifier . type IDENTIFIER '(' method_arguments_optional ')' '{' stmt_seq_optional '}'
   82            | visibility_modifier . VOID_KW IDENTIFIER '(' method_arguments_optional ')' '{' stmt_seq_optional '}'
   83            | visibility_modifier . STATIC VOID_KW IDENTIFIER '(' method_arguments_optional ')' '{' stmt_seq_optional '}'
   85            | visibility_modifier . STATIC type IDENTIFIER '(' method_arguments_optional ')' '{' stmt_seq_optional '}'
  106 constructor_decl: visibility_modifier . IDENTIFIER '(' ')' '{' stmt_seq_optional '}'
  107                 | visibility_modifier . IDENTIFIER '(' method_arguments ')' '{' stmt_seq_optional '}'

    IDENTIFIER      shift, and go to state 102
    INTEGER         shift, and go to state 75
    FLOATING_POINT  shift, and go to state 76
    STRING          shift, and go to state 77
    CHARACTER       shift, and go to state 78
    CHAR_KW         shift, and go to state 79
    INT_KW          shift, and go to state 80
    STRING_KW       shift, and go to state 81
    BOOL_KW         shift, and go to state 82
    FLOAT_KW        shift, and go to state 83
    VOID_KW         shift, and go to state 103
    TRUE_KW         shift, and go to state 85
    FALSE_KW        shift, and go to state 86
    STATIC          shift, and go to state 104
    VAR             shift, and go to state 105
    '('             shift, and go to state 87

    standard_type        go to state 88
    standard_array_type  go to state 89
    type                 go to state 106
    var_decl             go to state 107
    var_decl_with_init   go to state 108
    access_expr          go to state 94


State 57

   50 struct_members: field_decl . ';'

    ';'  shift, and go to state 109


State 58

   51 struct_members: method_decl .

    $default  reduce using rule 51 (struct_members)


State 59

   52 struct_members: constructor_decl .

    $default  reduce using rule 52 (struct_members)


State 60

   53 struct_members: destructor_decl .

    $default  reduce using rule 53 (struct_members)


State 61

   41 class_members: class_members . method_decl
   42              | class_members . field_decl
   43              | class_members . operator_overload
   44              | class_members . constructor_decl
   45              | class_members . destructor_decl
   47 class_members_optional: class_members .

    PUBLIC              shift, and go to state 47
    PROTECTED           shift, and go to state 48
    PRIVATE             shift, and go to state 49
    STATIC              shift, and go to state 50
    TILDE               shift, and go to state 51
    INTERNAL            shift, and go to state 52
    PROTECTED_INTERNAL  shift, and go to state 53

    $default  reduce using rule 47 (class_members_optional)

    visibility_modifier  go to state 63
    field_decl           go to state 110
    method_decl          go to state 111
    operator_overload    go to state 112
    constructor_decl     go to state 113
    destructor_decl      go to state 114


State 62

   33 class_decl: PUBLIC CLASS IDENTIFIER '{' class_members_optional . '}'

    '}'  shift, and go to state 115


State 63
